fixed readability

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;    
-  background-image: url("./images/back.png");
+  background-image: url("./images/repeat.png");
 
   -moz-osx-font-smoothing: grayscale;
 }
